kubernetes/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-fastapi
  namespace: cwoche-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      serviceAccountName: python-app
      containers:
        - name: fastapi-users-api
          image: titowoche30/fastapi-simple-users-api:0.5
          ports:
            - containerPort: 8000
