kubernetes/manifests/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: cwoche-nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
      - protocol: TCP
        name: http-svc
        port: 80
        targetPort: 80
