kubernetes/manifests/service_load_balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-fastapi
  namespace: cwoche-api
spec:
  type: LoadBalancer      # public aws classic load balancer
  selector:
    app: fastapi
  ports:
      - protocol: TCP
        name: http-svc
        port: 80
        targetPort: 8000
