kubernetes/manifests/ingress-python.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: python-app
  namespace: cwoche-api
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/load-balancer-name: python-app-alb
#    alb.ingress.kubernetes.io/group.name: cwoche-ingress-alb-group
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/success-codes: '200-400'
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '30'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '20'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '3'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb
  rules:
    - host: python-app.cwoche.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-fastapi
                port:
                  name: http-svc
#                  number: 8000
